fixed minor alignment issue on register button

--- a/assets/css/sass/blocks/_cards.scss
+++ b/assets/css/sass/blocks/_cards.scss
@@ -205,7 +205,7 @@ TODO clean up the !important
         right: inherit;
         @include media($md) {
             position: fixed;
-            top: 1.5rem;
+            top: 2.25rem;
             right: calc((100% - 53.5rem) * .5);
             width: auto;
             max-width: inherit;
